--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
         <div class="hero-bg"></div>
         <div class="container mx-auto px-6 flex items-center justify-between flex-col lg:flex-row">
             <div class="w-full lg:w-1/2 mb-8 lg:mb-0 text-center lg:text-left">
-                <h1 class="text-5xl lg:text-7xl font-black mb-6"> The <span class="gradient-text">50K</span> Content Idea <br>For Trey </h1>
+                <h1 class="text-5xl lg:text-7xl font-black mb-6"> The <span class="gradient-text">Viral</span> Content Idea <br>For Trey </h1>
                 <p class="text-xl lg:text-2xl text-gray-300 mb-8 leading-relaxed">  work for Trey and RGP, creating 3 original viral pieces of content and responding to all incoming questions. </p>
                 <div class="mistake-highlight"> <i class="fas fa-exclamation-triangle mr-2"></i> See the viral contents </div>
                 <div class="mt-4 text-2xl font-bold text-white">↓</div>
@@ -569,7 +569,7 @@
                 </div>
             </div>
             <div class="mt-8 text-center">
-                <a href="#" class="cta-button text-lg"> <i class="fas fa-video mr-2"></i> See Full Assessment and Videos </a>
+                <a href="https://drive.google.com/drive/folders/1gLU25kdUtbiM8OuqC8ZiwoUVAoi7NhTQ?usp=sharing" class="cta-button text-lg"> <i class="fas fa-video mr-2"></i> See Full Assessment and Videos </a>
             </div>
         </div>
     </section>
@@ -579,7 +579,7 @@
             <h2 class="text-4xl lg:text-5xl font-black text-white mb-6"> 10x Your Results </h2>
             <p class="text-xl text-white opacity-90 mb-8 max-w-2xl mx-auto"> Click on the <strong>Button</strong> bellow and receive all the exclusive content to help you 10x your results! See the full assessment and videos bellow. </p>
             <div class="flex flex-col sm:flex-row gap-6 justify-center items-center">
-                <a href="#" class="border-2 border-white text-white px-8 py-4 rounded-full font-bold hover:bg-white hover:text-red-600 transition-colors text-lg"> <i class="fas fa-video mr-2"></i> See Full Assessment and Videos </a>
+                <a href="https://drive.google.com/drive/folders/1gLU25kdUtbiM8OuqC8ZiwoUVAoi7NhTQ?usp=sharing" class="border-2 border-white text-white px-8 py-4 rounded-full font-bold hover:bg-white hover:text-red-600 transition-colors text-lg"> <i class="fas fa-video mr-2"></i> See Full Assessment and Videos </a>
             </div>
             <div class="mt-12 text-white opacity-75">
                 <p class="text-lg"> <i class="fas fa-user-circle mr-2"></i> Trey Sheneman </p>
